--- a/src/stylesheets/adaptive.scss
+++ b/src/stylesheets/adaptive.scss
@@ -1057,7 +1057,9 @@
             width: 45.9vw;
             height: 25.4vw;
 
-            .cov {
+            .cov,
+            .cov1,
+            .cov2 {
               height: 12.2vw;
             }
 
@@ -1259,7 +1261,8 @@
           }
 
           .cov,
-          .cov1 {
+          .cov1,
+          .cov2 {
             height: 26.1vw;
           }
 
@@ -1958,6 +1961,12 @@
 
         .tex1 {
           margin-bottom: 1vw;
+        }
+      }
+
+      .cap_11 {
+        p {
+          font-size: 2.2vw;
         }
       }
 
