--- a/src/stylesheets/2_1.scss
+++ b/src/stylesheets/2_1.scss
@@ -87,7 +87,8 @@ body.topic2_1 {
       }
     }
 
-    .cap_11 {
+    .cap_11,
+    .cap_111 {
       margin-top: 1vw;
       width: 57.5vw;
       display: flex;
